Right-align contact boxes, fix blog image, style class links like projects

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,11 +97,19 @@
   white-space: normal;
 }
 
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
 .contact .textblock {
   max-width: 30rem;
   margin-top: 1rem;
 }
 @media only screen and (max-width: 640px) {
+  .contact {
+    align-items: flex-start;
+  }
   .contact .textblock {
     max-width: 55rem;
   }
@@ -235,9 +243,6 @@
   flex-direction: column;
 }
 .classes .textblock h1 {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
   margin: 0;
   padding-top: 0.25rem;
 }
@@ -245,11 +250,13 @@
 .classes .textblock ol {
   margin: 0.75rem;
 }
-.classes .textblock span, .classes .textblock a {
-  margin: 0.75rem;
-  font-weight: bold;
+.classes .textblock .card-actions {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: auto;
 }
-
 @media only screen and (max-width: 640px) {
   .classes {
     grid-template-columns: 1fr;
@@ -540,7 +547,7 @@ ul {
 }
 
 .people .people-group .textblock .card-actions button,
-.people .people-group .textblock .card-actions a, .projects .textblock .card-actions a, .papers .textblock .window__paper a, .classes .textblock span, .classes .textblock a {
+.people .people-group .textblock .card-actions a, .projects .textblock .card-actions a, .papers .textblock .window__paper a, .classes .textblock .card-actions a {
   margin: 0.4rem;
   display: inline-block;
   border: 2px solid #000;
@@ -552,7 +559,7 @@ ul {
   transition: all 0.2s linear;
 }
 .people .people-group .textblock .card-actions button:hover,
-.people .people-group .textblock .card-actions a:hover, .projects .textblock .card-actions a:hover, .papers .textblock .window__paper a:hover, .classes .textblock span:hover, .classes .textblock a:hover {
+.people .people-group .textblock .card-actions a:hover, .projects .textblock .card-actions a:hover, .papers .textblock .window__paper a:hover, .classes .textblock .card-actions a:hover {
   color: #ffffff;
   background-color: #000;
 }
